Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.3
-
None
-
Windows 10
Description
When Qt Creator crash the session isn't correctly restored, it can be erased or set to the previous session state.
Session should be saved each time a project or a file is opened instead when leaving Qt Creator to avoid this kind of issue.
The session only support the main window, as I am using multiple windows I'll appreciate to see all of them restored.