Core: Save session state on autoSave

If Creator crashes, session information (like open files, bookmarks
etc.) should be restored.

Task-number: QTCREATORBUG-16752
Change-Id: Ife1a2ffb62a3dd9b302e08ad9df9537667173e47
Reviewed-by: Eike Ziller <eike.ziller@qt.io>